Alt text for logo image

--- a/app/views/application/_navbar.html.haml
+++ b/app/views/application/_navbar.html.haml
@@ -1,7 +1,7 @@
 %nav.navbar
   %div.navbar-brand
     //%h1.title.navbar-item Checkr
-    = link_to image_tag('checkr_logo.png'), root_path, { class: 'navbar-item' }
+    = link_to image_tag('checkr_logo.png', { alt: 'Checkr' }), root_path, { class: 'navbar-item' }
     
     
     %a.burger.navbar-burger{role: 'navigation', 'aria-expanded': 'false', 'data-target': 'menu'}
