--- a/app/views/application/_navbar.html.haml
+++ b/app/views/application/_navbar.html.haml
@@ -25,5 +25,5 @@
           - if logged_in
             = link_to 'Sign out', logout_path, method: :delete, remote: true, class: 'button'
           - else
-            = link_to 'Log in', login_path, { class: 'button is-link' }
-            = link_to 'Sign up', signup_path, { class: 'button' }
+            = link_to 'Log in', login_path, { class: 'button' }
+            = link_to 'Sign up', signup_path, { class: 'button is-link' }
