better warning for pass/fail of files

--- a/app/views/application/index.html.haml
+++ b/app/views/application/index.html.haml
@@ -8,7 +8,7 @@
 %section.section
   %div.container.has-text-centered
     %p.subtitle Checkr works by comparing your files to a vast database of known malware.
-    %p.subtitle Just upload any files you're suspicous of!
+    %p.subtitle Just upload any files you're suspicious of!
 
 
 %section.section
