screenshot on landing page

--- a/app/views/application/about.html.haml
+++ b/app/views/application/about.html.haml
@@ -10,3 +10,9 @@
         Checkr was created by
         %a{href: 'https://www.gregbrisebois.com'} Greg Brisebois
         for CS174.
+      %p
+        This application does not actually provide any security
+        and should not be used in any real sense.
+      %p
+        This site is known to the State of California to cause
+        birth defects and cancer.
